--- a/report/stock_picking_report.xml
+++ b/report/stock_picking_report.xml
@@ -74,7 +74,7 @@
                                     </div>
                                     <div t-if="show_partner" name="partner_header">
                                         <div t-field="o.partner_id.commercial_partner_id" t-options="{&quot;widget&quot;: &quot;contact&quot;, &quot;fields&quot;: [&quot;address&quot;, &quot;name&quot;, &quot;phone&quot;, &quot;vat&quot;], &quot;no_marker&quot;: True, &quot;phone_icons&quot;: True}">
-                                             <div class="bg-light border-1 rounded h-100 d-flex flex-column align-items-center justify-content-center p-4 opacity-75 text-muted text-center">
+                                            <div class="bg-light border-1 rounded h-100 d-flex flex-column align-items-center justify-content-center p-4 opacity-75 text-muted text-center">
                                                 <strong>Recipient address</strong>
                                                 <div>Presence depends on the type of operation.</div>
                                             </div>
@@ -87,6 +87,9 @@
                             <div class="row">
                                 <div class="col-9">
                                     <h4 t-field="o.name" class="mt0">WH/OUT/00001</h4>
+                                    <h6>
+                                        <span><strong>Order Number: </strong></span><span t-field="o.order_number" />
+                                    </h6>
                                     <div>
                                         <span><strong>Contact: </strong></span><span t-field="o.partner_id" />
                                     </div>
